--- a/phase3/index.html
+++ b/phase3/index.html
@@ -23,11 +23,11 @@
     <div id="log">
       <h2>welcome back</h2>
       <form>
-        <input id="user" type="text" placeholder="username" />
+        <input id="username" type="text" placeholder="username" />
         <br />
-        <input id="pass" type="text" placeholder="password" />
-        <button class="button" onclick="toDashboard()">log in</button>
+        <input id="password" type="password" placeholder="password" />
       </form>
+      <button class="button" onclick="toDashboard()">log in</button>
     </div>
   </body>
 </html>
