--- a/phase3/public/dashboard.html
+++ b/phase3/public/dashboard.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <title>therapi</title>
-    <link rel="icon" href="./assets/heart.png" />
+    <link rel="icon" href="/public/assets/heart.png" />
     <link rel="stylesheet" href="./styles.css" />
     <script src="./buttons.js"></script>
     <script src="./list.js"></script>
